# epp-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  architecture.md  docker-compose.yml  pyproject.toml  requirement.md
.github/: copilot-instructions.md  eepp_api.md  gemini-mentor.md
docs/design/: deduplication.md  development_approach.md  project_setup.md
docs/discovery/: eepp_api.md  eepp_evaluacion_api_response.json  eepp_postulacion_api_response.json  teee_api.md  teee_evaluacion_api_response.json  teee_finalizado_api_response.json  teee_postulacion_api_response.json
docs/sprints/: sprint_1_3_eepp_client.md  sprint_1_4_data_models.md  sprint_1_5_database_connectivity_v1.md  sprint_1_6_processing_v1.md  sprint_1_7_loading_v1.md  sprint_1_8_orchestrator_v1.md  sprint_3_10_populate_sources.md  sprint_3_11_cross_source_matching.md  sprint_3_12_fix_state_priority.md  sprint_3_13_unified_entrypoint.md  sprint_3_14_periodic_ingestion.md  sprint_3_15_source_priority.md  sprint_3_2_teee_client.md  (+18 more)
migrations/: README.md  env.py  script.py.mako
scripts/: audit_stale_active_offers.py  cleanup_notification_queue.py  close_stale_offers.py  entrypoint.sh  ingest_all.py  init_db.py  integrity_check.py  load_eepp.py  load_teee.py  migrate_raw_to_sources.py  normalize_regions.py  notify_new_offers.py  report_eepp_duplicates.py  report_teee_duplicates.py  weekly_digest.py
src/: main.py
tests/: test_eepp_client.py  test_repository.py  test_schemas.py  test_session.py  test_teee_client.py  test_teee_client_search_after.py  test_transformers.py
(+42 files in other folders)
