[project]
name = "eepp"
version = "0.1.0"
description = "ETL pipeline for Chilean public sector job offers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"asyncpg>=0.29.0",
	"greenlet>=3.3.2",
	"httpx>=0.27.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.1",
	"sqlalchemy>=2.0.29",
]

[dependency-groups]
dev = [
	"pytest>=8.1.1",
	"pytest-asyncio>=0.23.6",
	"ruff>=0.3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
