[project]
name = "eepp"
version = "0.1.0"
description = "ETL pipeline for Chilean public sector job offers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"alembic>=1.18.4",
	"asyncpg>=0.29.0",
	"fastapi>=0.135.2",
	"greenlet>=3.3.2",
	"httpx>=0.27.0",
	"jinja2>=3.1.6",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.2.1",
	"python-multipart>=0.0.22",
	"sqlalchemy>=2.0.29",
	"uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
	"pytest>=8.1.1",
	"pytest-asyncio>=0.23.6",
	"ruff>=0.3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
